# teatro

./: .gitignore  Cargo.toml  README.md  generated-sources.json  io.github.rakuja.teatro.desktop  io.github.rakuja.teatro.metainfo.xml  io.github.rakuja.teatro.yml
.github/workflows/: release.yml
src/: main.rs
src/audio/: audio_filter.rs  playback_handler.rs
src/backend/: hw_handler.rs  keyboard_handler.rs  listener_initializer.rs  mod.rs  pad_handler.rs
src/comms/: command.rs
src/gui/: gui_wrapper.rs  handler.rs  initializer.rs  mod.rs  sync_handler.rs  ui.rs
src/gui/comms/: command.rs  mod.rs  to_backend_from_gui.rs  to_gui_from_backend.rs  watchdog_handler.rs
src/gui/local_view/: audio_player.rs  audio_player_states.rs  information_listing.rs  mod.rs  teatro_view.rs
src/gui/settings_view/: settings.rs
src/gui/web_view/: bybe_view.rs  mod.rs
src/hardware_handler/: hw_handler.rs  keyboard_handler.rs  listener_initializer.rs  midi_handler.rs  mod.rs  pad_handler.rs
src/os_explorer/: explorer.rs
src/states/: audio_sinks.rs  button_states.rs  filter_data.rs  information_data.rs  knob_value_update.rs  mod.rs  music_state.rs  playlist_data.rs  settings_data.rs  sound_state.rs  visualizer.rs
