[package]
name = "teatro"
version = "1.0.0"
authors = ["RakuJa"]

# Compiler info
edition = "2024"
rust-version = "1.85.1"

description = ""
readme = "README.md"
homepage = "https://github.com/RakuJa/teatro"
repository = "https://github.com/RakuJa/teatro"
license = "EUPL-1.2"
keywords = []
publish = false

[lints.rust]
unsafe_code = "forbid"
deprecated = "allow"

[lints.clippy]
struct_field_names = { level = "allow", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
# We are ok with losing some data without wrapping. We are not ok with wrapping
# Ex: 128.12 => 128 is ok, 128 => 0 is not.
cast_possible_truncation = { level = "allow", priority = 2 }
cast_precision_loss = { level = "allow", priority = 2 }

future_not_send = { level = "allow", priority = 2 }

pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 1 }


[dependencies]
rodio = "0.21.1"
biquad = "0.5.0"

ramidier = {version = "0.3.0", features=["jack-sys"]}

anyhow = "1.0.100"
env_logger = "0.11.8"
dotenv = "0.15.0"
log = "0.4.28"
bon = "3.8.2"
bitflags = "2.10.0"
fastrand = "2.3.0"
cfg-if = "1.0.4"

flume = "0.12.0"

eframe = { version = "0.33.3", optional = true }
egui = { version = "0.33.3", optional = true }
egui_font_loader = { version = "1.0.0", optional = true }
wry = {version = "0.54.1", optional = true}
raw-window-handle = { version = "0.6.2", optional = true }
tao = { version = "0.34.5", optional = true }

hotwatch = { version = "0.5.0", optional = true }


[features]
default = ["gui", "bybe"]
gui = ["dep:egui", "dep:eframe", "dep:egui_font_loader", "dep:hotwatch"]
bybe = ["dep:wry", "dep:raw-window-handle", "dep:tao", "gui"]
midi = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false